# pas_date_time

./: .gitignore  LICENSE  README  build.xml  requirements.txt  setup.cfg  setup.py
lang/de/: pas_date_time.json  pas_datetime.json
lang/de_formal/: pas_datetime.json
lang/en/: pas_date_time.json  pas_datetime.json
src/dNG/data/text/: date_time.py
src/dNG/pas/data/text/: date_time.py
src/pas_date_time/: __init__.py  date_time.py
